force-app/main/default/objects/FEC_Integration_Case_Snapshot__c/FEC_Integration_Case_Snapshot__c.object-meta.xml
<CustomObject>
    <label>FEC Integration Case Snapshot</label>
    <nameField>
        <displayFormat>HCC-{0000}</displayFormat>
        <label>Hold Case Config Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FEC Integration Case Snapshot</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>