force-app/main/default/objects/FEC_Integration_Case_Snapshot__c/fields/FEC_Data__c.field-meta.xml
<CustomField>
    <fullName>FEC_Data__c</fullName>
    <label>Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>