force-app/main/default/objects/FEC_Integration_Case_Snapshot__c/fields/FEC_Service_Case_Id__c.field-meta.xml
<CustomField>
    <fullName>FEC_Service_Case_Id__c</fullName>
    <label>Service Case Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>