force-app/main/default/objects/FEC_Integration_Case_Snapshot__c/fields/FEC_Type__c.field-meta.xml
<CustomField>
    <fullName>FEC_Type__c</fullName>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>